--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,3 +1,10 @@
 engines:
   shellcheck:
     enabled: true
+ratings:
+  paths:
+  - bin/**
+  - libexec/**
+  - "**.sh"
+exclude_paths:
+- test/**/*
